# state_machine_static

manipulation_msgs/: CMakeLists.txt  package.xml
navigation_msgs-main/: CMakeLists.txt  README.md  package.xml
navigation_msgs-main/msg/: simple_feedback_msg.msg
navigation_msgs-main/srv/: add_place_srv.srv  correct_position_srv.srv  follow_you_srv.srv  get_route_guidance_srv.srv  go_to_defined_angle_srv.srv  go_to_place_srv.srv  go_to_relative_point_srv.srv  set_current_place_srv.srv
navigation_utilities-main/: CMakeLists.txt  README.md  package.xml
navigation_utilities-main/resources/: edges.txt  places.txt
navigation_utilities-main/src/: NavigationGraph.py  NavigationUtilities.py
remote_controller/: CMakeLists.txt  README.md  package.xml
remote_controller/include/remote_controller/: camera_thread.h  controller_thread.h  js_controller.h  pepper_activation.h  pepper_animations.h  pepper_leds.h  pepper_movement.h  pepper_speech.h  remote_controller.h  rviz_thread.h
remote_controller/launch/: rviz.launch
remote_controller/launch/.rviz/: camera_base.rviz  camera_map.rviz  camera_tf_base.rviz  camera_tf_map.rviz  depth_base.rviz  depth_camera_base.rviz  depth_camera_map.rviz  depth_camera_tf_base.rviz  depth_camera_tf_map.rviz  depth_map.rviz  depth_tf_base.rviz  depth_tf_map.rviz  initial_map.rviz  laser_base.rviz  laser_map.rviz  map.rviz  tf_base.rviz  tf_map.rviz
remote_controller/resources/: corferias  corferias1  papas  script_bancolombia  script_tester
remote_controller/src/: camera_thread.cpp  cameras.cpp  controller_thread.cpp  js_controller.cpp  main.cpp  pepper_activation.cpp  pepper_animations.cpp  pepper_leds.cpp  pepper_movement.cpp  pepper_speech.cpp  remote_controller.cpp  rviz_thread.cpp
robot_toolkit_msgs/: CMakeLists.txt  README.md  package.xml  robot_toolkit_msgs.sh
robot_toolkit_msgs/msg/: animation_msg.msg  audio_localization_msg.msg  audio_tools_msg.msg  camera_parameters_msg.msg  depth_to_laser_msg.msg  face_detection_msg.msg  leds_parameters_msg.msg  misc_tools_msg.msg  motion_tools_msg.msg  navigation_tools_msg.msg  path_msg.msg  set_angles_msg.msg  special_settings_msg.msg  speech_msg.msg  speech_parameters_msg.msg  touch_msg.msg  vision_tools_msg.msg
robot_toolkit_msgs/srv/: audio_tools_srv.srv  misc_tools_srv.srv  motion_tools_srv.srv  navigation_tools_srv.srv  speech_recognition_srv.srv  vision_tools_srv.srv
speech_recognition_msgs/: CMakeLists.txt  README.md  package.xml
speech_recognition_msgs/srv/: q_a_speech_srv.srv  saveAudio_srv.srv  save_recording.srv  talk_speech_srv.srv
