<?xml version="1.0"?>
<package format="2">
  <name>navigation_msgs</name>
  <version>0.0.0</version>

  <description>The package that contains messages for the navigation_utilities package</description>

  <maintainer email="ds.ortiz@uniandes.edu.co">David Santiago Ortiz Almanza</maintainer>
  <maintainer email="ds.vargasp1@uniandes.edu.co">David Santiago Vargas Prada</maintainer>
  <maintainer email="d.villarg@uniandes.edu.co">Daniel Villar Gonzalez</maintainer>

  <license>GVLP3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
