<?xml version="1.0"?>
<package format="2">
  <name>navigation_utilities</name>
  <version>0.0.0</version>
  <description>The navigation_utilities package</description>

  <maintainer email="ds.ortiz@uniandes.edu.co">David Santiago Ortiz Almanza</maintainer>

  <license>TODO</license>

  <url type="repository">http://wiki.ros.org/navigation_utilities</url>

  <author email="ds.ortiz@uniandes.edu.co">David Santiago Ortiz Almanza</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
