<?xml version="1.0"?>
<package format="2">
  <name>remote_controller</name>
  <version>0.0.0</version>
  <description>This is a simple example package that uses QT5 Widgets in ROS </description>
  <maintainer email="quintero.carlos@uniandes.edu.co">CarlosQ</maintainer>
  <maintainer email="jj.garcia10@uniandes.edu.co">JuanJoseG</maintainer>
  <maintainer email="a.zuluaga10@uniandes.edu.co">AdelaidaZ</maintainer>
  <maintainer email="jd.gasrciah@uniandes.edu.co">JuanDGarcia</maintainer>
  <maintainer email="cd.garrido@uniandes.edu.co">CesarG</maintainer>
  <maintainer email="n.rocha11@uniandes.edu.co">NicolasR</maintainer>

  <license>GVLP3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robot_toolkit_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>robot_toolkit_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_toolkit_msgs</exec_depend>


  <export>
    
  </export>
</package>